--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,22 +130,25 @@
   <data name="ApplyCodeChanges_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ApplyCodeChanges_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FileSystemDriverFile_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FileSystemDriverFile_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Refetch_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Refetch_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Target_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Target_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DownloadLog_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DownloadLog_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Target_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Target_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="FileSystemDriverFile_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FileSystemDriverFile_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StatisticsUp_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StatisticsUp_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="BoundBreakpoint_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BoundBreakpoint_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Space_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Space_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
