--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="StatisticsUp_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StatisticsUp_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="share_social_interface_button_icon_icons_com_73164" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\share-social-interface-button_icon-icons.com_73164.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Driver_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Driver_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,8 +133,11 @@
   <data name="Select_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Select_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ApplyCodeChanges_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ApplyCodeChanges_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StatisticsUp_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StatisticsUp_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DMAChannel_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DMAChannel_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Span_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Span_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,16 +151,16 @@
   <data name="FileSystemDriverFile_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FileSystemDriverFile_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="share_social_interface_button_icon_icons_com_73164" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\share-social-interface-button_icon-icons.com_73164.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Refetch_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Refetch_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Space_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Space_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Refetch_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Refetch_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ApplyCodeChanges_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ApplyCodeChanges_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DMAChannel_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DMAChannel_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ClearCollection_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ClearCollection_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
