added aboutbox with version info

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="crossroads" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\crossroads.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="question-mark-icon-flat-21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\question-mark-icon-flat-21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BWJrU_0001_Bright" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BWJrU_0001_Bright.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -166,6 +169,9 @@
   <data name="keyboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gene-editing-icon-64x64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gene-editing-icon-64x64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BWJrU_0003_Chocolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BWJrU_0003_Chocolate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -175,20 +181,20 @@
   <data name="BWJrU_0005_Excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BWJrU_0005_Excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="swatches" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\swatches.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="barchart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barchart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="BWJrU_0007_Gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BWJrU_0007_Gray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="check1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\check1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BWJrU_0007_Gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BWJrU_0007_Gray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="denied" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\denied.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,7 +208,7 @@
   <data name="stack2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stack2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="gene-editing-icon-64x64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gene-editing-icon-64x64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="gene_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gene_info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
